# fetchy

./: Cargo.toml  LICENSE  README.md  uninstall
.github/workflows/: release.yml
src/: args.rs  config.rs  helper.rs  main.rs  model.rs  printer.rs  run.rs  system.rs
