[package]
name = "fetchy"
version = "0.1.2"
description = "A small command line system information tool"
license-file="LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = "4.4.12"
crossterm = "0.27.0"
os_info = "3.7.0"
serde_json = "1.0.108"
sysinfo = "0.29.11"
whoami = "1.4.1"
winit = "0.29.4"
serde = { version = "1.0.193", features = ["derive"] }
