[package]
name = "fetchy"
version = "0.1.4"
description = "A small command line system information tool"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = "4.5.8"
crossterm = "0.27.0"
os_info = "3.8.2"
serde_json = "1.0.119"
sysinfo = "0.30.12"
whoami = "1.5.1"
winit = "0.29.15"
serde = { version = "1.0.203", features = ["derive"] }
opener = "0.7.1"
battery = "0.7.8"
wgpu = "0.20.1"
spinoff = "0.8.0"
